# tree-sitter-vie

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  biome.json  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml  publish.yml  release.yml
bindings/c/: tree-sitter-vie.pc.in
bindings/c/tree_sitter/: tree-sitter-vie.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vie/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVieTests/: TreeSitterVieTests.swift
bindings/zig/: root.zig  test.zig
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
src/queries/: highlights.scm
test/corpus/: comments.txt  display.txt  escape.txt  expressions.txt  if.txt  invalid.txt  literals.txt  render.txt  set.txt  switch.txt
