[package]
name = "tree-sitter-vie"
description = "Vie grammar for tree-sitter"
version = "0.1.2"
authors = ["nickshiro","skewb1k"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vie"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/vietmpl/tree-sitter-vie"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
